--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: /
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#page-top" id="i18_title"><span data-i18n="website.title">{{ site.logo }}</span></a>
+        <a class="navbar-brand" href="#page-top" id="i18_title"><img data-i18n="website.title" src="{{ site.logo }} " /></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right" id="i18_navbar">
